# openpts

./: .gitignore  ChangeLog  Makefile.am  README  bootstrap.sh  configure.in
doc/: .gitignore  Makefile.am  OpenPTS-fig-architecture.eps  OpenPTS-fig-dataflow.eps  OpenPTS-fig-selfupdate.eps  design.tex  doxygen.conf.in  operationflow.dot  userguide.tex  userguide_build.tex  userguide_cmd.tex  userguide_config.tex  userguide_platform.tex  userguide_uc1.tex  userguide_uc2.tex
doc/doxygen/: doxygen.conf  gen.sh
include/: Makefile.am  cvs2msg.pl  iwgifpts.h  mainpage.h  openpts.h  openpts_aru.h  openpts_fsm.h  openpts_ifm.h  openpts_log.h  openpts_msg.csv  openpts_tboot.h  openpts_tpm.h  ptsevt_msg.h
include/tnc/: tncifimc.h  tncifimv.h  tncifm.h  tncifmpts.h
man/: Makefile.am
man/man1/: Makefile.am
man/man3/: Makefile.am
man/man5/: Makefile.am  ptsc.conf.5
man/man8/: Makefile.am  iml2text.8  openpts.8  ptsc.8
models/: .gitignore  Makefile.am  bios_pcr0.uml  bios_pcr1.uml  bios_pcr2.uml  bios_pcr3.uml  bios_pcr4.uml  bios_pcr5.uml  bios_pcr6.uml  bios_pcr7.uml  bios_uefi_pcr0.uml  f12_ima_pcr10.uml  f12_ima_pcr10wog.uml  grub_livecd_pcr4.uml  grub_pcr4.uml  grub_pcr4cd.uml  grub_pcr4hdd.uml  grub_pcr5.uml  grub_pcr8.uml  grub_pcr8knoppix.uml  grub_pcr8vmm.uml  ima_pcr10.uml  ima_pcr10cd.uml  ima_pcr10wog.uml  ima_rhel6_pcr10.uml  intel_txt_tboot_pcr17.uml  intel_txt_tboot_pcr18.uml  intel_txt_tboot_pcr19.uml  openpts.uml  ptsc_pcr11.uml  rhel6_ima_pcr10.uml  seabios_pcr0.uml  tboot_pcr17.uml  tboot_pcr18.uml  tboot_pcr19.uml  uefi_pcr0.uml  uefi_pcr1.uml  uefi_pcr2.uml  uefi_pcr3.uml  uefi_pcr4.uml  (+5 more)
po_/: LINGUAS  POTFILES.in  README  ja.po  openpts.pot
src/: .gitignore  Makefile.am  action.c  aide.c  aru.c  base64.c  collector.c  conf.c  ctx.c  fsm.c  ifm.c  imc.c  iml.c  iml2aide.c  iml2text.c  imv.c  ir.c  ir2text.c  log.c  measure.c  misc.c  nonce.c  openpts.c  policy.c  prop.c  ptsc.c  ptsevt.c  ptsevtd.c  reason.c  rm.c  rm2dot.c  smbios.c  snapshot.c  ssh.c  target.c  tboot2iml.c  tpm.c  tpm_createkey.c  tpm_extendpcr.c  tpm_readpcr.c  (+7 more)
